--- a/SkySmp.html
+++ b/SkySmp.html
@@ -58,7 +58,7 @@ footer{margin-top:20px;text-align:center;opacity:0.8}
   <div class="container">
     <header>
       <div class="brand">
-        <div class="logo">MC</div>
+        <div class="logo">https://files.catbox.moe/mtky56.jpg</div>
         <div>
           <div style="font-weight:700">SkySmp</div>
           <div style="font-size:12px;opacity:0.8">IP: akilaltaf5.aternos.me:46072</div>
@@ -156,10 +156,10 @@ footer{margin-top:20px;text-align:center;opacity:0.8}
         {id:'ultimate',name:'Ultimate',price:'0K',benefits:['Semua benefit','Custom item','Support priority']}
       ],
       org: [
-        {role:'Owner',name:'Pemilik Server',ign:'OwnerIGN'},
-        {role:'Co-Owner',name:'Co Owner',ign:'CoIGN'},
-        {role:'Admin',name:'Admin1',ign:'AdminIGN'},
-        {role:'Moderator',name:'Mod1',ign:'ModIGN'},
+        {role:'Owner',name:'Pemilik Server',ign:'akil/polek'},
+        {role:'Co-Owner',name:'Co Owner',ign:'naCHYn_MC'},
+        {role:'Admin',name:'Admin1',ign:'naCHYn_MC'},
+        {role:'Builder',name:'Mod1',ign:'Fahmk'},
         {role:'Helper',name:'Helper1',ign:'HelpIGN'}
       ]
     }
