--- a/SkySmp.html
+++ b/SkySmp.html
@@ -58,7 +58,7 @@ footer{margin-top:20px;text-align:center;opacity:0.8}
   <div class="container">
     <header>
       <div class="brand">
-        <div class="logo">https://files.catbox.moe/mtky56.jpg</div>
+        <div class="logo">Sky</div>
         <div>
           <div style="font-weight:700">SkySmp</div>
           <div style="font-size:12px;opacity:0.8">IP: akilaltaf5.aternos.me:46072</div>
@@ -130,8 +130,8 @@ footer{margin-top:20px;text-align:center;opacity:0.8}
     <h3>Pilih Owner untuk menghubungi</h3>
     <p id="modalText">Aksi: </p>
     <div class="owner-choice">
-      <button class="owner-btn" data-owner="owner1">Owner 1</button>
-      <button class="owner-btn" data-owner="owner2">Owner 2</button>
+      <button class="owner-btn" data-owner="owner1">Akil/Polek</button>
+      <button class="owner-btn" data-owner="owner2">naCHYn_MC</button>
     </div>
     <div style="margin-top:12px;text-align:right"><button id="modalClose" style="padding:8px;border-radius:8px;border:1px solid rgba(255,255,255,0.06)">Batal</button></div>
   </div>
@@ -139,8 +139,8 @@ footer{margin-top:20px;text-align:center;opacity:0.8}
 
 <footer class="card">
   <div style="display:flex;justify-content:space-between;align-items:center;gap:12px;flex-wrap:wrap">
-    <div>Template dibuat untuk server Minecraft — ganti nomor WA di file JS.</div>
-    <div style="opacity:0.8">© Server</div>
+    <div>SkySmp website By naCHYn_Mc</div>
+    <div style="opacity:0.8">© Server SkySmp</div>
   </div>
 </footer>
 
@@ -159,8 +159,8 @@ footer{margin-top:20px;text-align:center;opacity:0.8}
         {role:'Owner',name:'Pemilik Server',ign:'akil/polek'},
         {role:'Co-Owner',name:'Co Owner',ign:'naCHYn_MC'},
         {role:'Admin',name:'Admin1',ign:'naCHYn_MC'},
-        {role:'Builder',name:'Mod1',ign:'Fahmk'},
-        {role:'Helper',name:'Helper1',ign:'HelpIGN'}
+        {role:'Builder',name:'builder',ign:'Fahmk'},
+        {role:'Helper',name:'Helper1',ign:'mencari'}
       ]
     }
     /* ---------------------------------------------------------- */
