--- a/SkySmp.html
+++ b/SkySmp.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Minecraft Server - Template</title>
+  <title>Minecraft Server SkySmp</title>
   <style>
     :root{
       --bg:#0f1724; --card:#0b1220; --text:#e6eef8; --accent:#3b82f6;
